# depth-aware-BA

./: .gitignore  README.md  pyproject.toml
configs/db/: eth3d_courtyard.yaml  eth3d_delivery_area.yaml  eth3d_electro.yaml  eth3d_facade.yaml  eth3d_kicker.yaml  eth3d_kicker_s1.yaml  eth3d_meadow.yaml  eth3d_office.yaml  eth3d_pipes.yaml  eth3d_playground.yaml  eth3d_relief.yaml  eth3d_relief_2.yaml  eth3d_terrace.yaml  eth3d_terrains.yaml  tt.yaml  tt_amb3r.yaml  tt_exhaustive.yaml
configs/depth/: bimodal.yaml  unimodal.yaml
configs/depthba/: amb3r_gmm_global.yaml  amb3r_unimodal_global.yaml  depthpro_global.yaml  depthpro_global_noaffine_median.yaml  depthpro_global_noaffine_unit.yaml
scripts/: diag_depth_scale.py  evaluate_vs_gt.py  evaluate_vs_tnt.py  gate_a_prime.py  process_amb3r_outputs.py  run_amb3r_3dgs.sh  run_amb3r_attach.sh  run_amb3r_ba.sh  run_amb3r_processing.sh  run_db_eth3d.sh  run_db_tt.sh  sanity_check_dbs.py  viz_bundle.py  viz_gmm_live.py  viz_gmm_patch.py
src/depthba/: __init__.py  config.py
src/depthba/backends/: custom_bundle_adjustment.py  custom_incremental_pipeline.py  depth_context.py
src/depthba/depth/: attach_depths.py  cli.py  schema.py  source.py
src/depthba/depth/extractors/: __init__.py  gmm_patch.py  mda.py  unimodal.py
src/depthba/frontends/: cli.py  colmap_runner.py  custom_incremental_pipeline.py
tests/: test_attach_depths.py  test_maxmix_factor.py  test_mda.py  test_schema.py  test_source.py  test_unimodal.py
