[project]
name = "depthba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Burhan", email = "adam14011999@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
depthba = "depthba:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
