[project]
name = "depthba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Burhan", email = "adam14011999@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "enlighten>=1.14.1",
    "pycolmap>=4.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
depthba-db = "depthba.frontends.cli:main_db"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
